tests/trybuild/diff_len_array.stderr
error[E0308]: mismatched types
 --> $DIR/diff_len_array.rs:6:63
  |
6 |     let _ = Matrix::<i32, LENGTH>::new([[1, 2, 3], [4, 5, 6], [7]]);
  |                                                               ^^^ expected an array with a fixed size of 3 elements, found one with 1 element
